Fixed layout issue

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,13 @@
     --blue: rgb(71, 135, 255);
 }
 
-body{
+html, body{
     padding: 0;
     margin: 0;
+    height: 100vh;
+    width: 100vw; 
+    display: grid;
+    grid-template-rows: 100px 60px 1fr 50px;
 }
 
 /* Header */
@@ -47,11 +51,6 @@ svg path{
 
 /* Main */
 
-.main {
-    height: 87vh;
-    display: grid;
-    grid-template-rows: 60px 1fr 50px;
-}
 
 .btn-container {
     background: var(--lightgrey);
